deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: web-deploy
spec:
  replicas: 5
  selector:
    matchLabels:
      app: webapp
  template: 
    metadata:
      labels:
       app: webapp
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
