result-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-app
  namespace: vote
spec:
  replicas: 8
  selector:
    matchLabels:
      app: result-app
  template:
    metadata:
      labels:
        app: result-app
    spec:
      containers:
      - name: result-app
        image: dockersamples/examplevotingapp_result
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: vote
spec:
  type: NodePort
  selector:
    app: result-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31001
