service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec: 
  type: LoadBalancer
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 80
