vote-pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-app
  namespace: vote
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vote-app
  template:
    metadata:
      labels:
        app: vote-app
    spec:
      containers:
      - name: vote-app
        image: dockersamples/examplevotingapp_vote
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  namespace: vote
spec:
  type: ClusterIP
  selector:
    app: vote-app
  ports:
  - port: 80
    targetPort: 80
